testdata/baselines/reference/submodule/compiler/typeReferenceDirectives1.errors.txt
/app.ts(3,8): error TS2581: Cannot find name '$'. Do you need to install type definitions for jQuery? Try `npm i --save-dev @types/jquery`.


==== /app.ts (1 errors) ====
    /// <reference types="lib" preserve="true" />
    interface A {
        x: $
           ~
!!! error TS2581: Cannot find name '$'. Do you need to install type definitions for jQuery? Try `npm i --save-dev @types/jquery`.
    }
==== /types/lib/index.d.ts (0 errors) ====
    interface $ { x }
    